@@ -10,7 +10,7 @@
         <value style="attribute" name="privacyRequested" field="privacyRequested"/>
         <value name="DataProviderReference" get-method="getDataProviderReference" set-method="setDataProviderReference"/>
         <structure name="SubscriberData" usage="optional" test-method="hasSubscriberData">
-            <structure name="vcard" field="subscriberData" ns="urn:ietf:params:xml:ns:vcard-4.0"
+            <structure name="vcard" field="subscriberData" ns="urn:ietf:params:xml:ns:vcard-4.0" usage="optional"
               marshaller="org.dellroad.jibxbindings.vcard.VCardMarshaller"
               unmarshaller="org.dellroad.jibxbindings.vcard.VCardMarshaller"/>
         </structure>
